Fixed alignment of NavBar links

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -253,13 +253,20 @@ body {
   align-items: center;
 
   text-align: left;
-
+  /* width: 300px; */
 }
 .navbar-links-owned, .navbar-links-all {
+  width: 200px;
+  /* background-color: #4471eb; */
   margin-top: 10%;
 }
 .navbar-links-all-links, .navbar-links-owned-links {
-  margin-left: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+
+  margin-left: 15%;
 }
 .text-links-navbar-all, .text-links-navbar-owned {
   text-decoration: none;
